[package]
name = "tbtools"
version = "0.4.2"
edition = "2021"

[dependencies]
ansi_term = "0.12"
clap = { version = "4.0", features = ["derive"] }
csv = "1.3.0"
cursive = { git = "https://github.com/gyscos/cursive", default-features = false, features = ["crossterm-backend"] }
include_dir = { version = "0.7.3", features = ["glob"] }
lazy_static = "1.4.0"
nix = "0.26.2"
num-traits = "0.2.15"
rand = "0.8.5"
regex = "1"
serde_json = "1.0.108"
udev = "0.7.0"
uuid = "1.7.0"
